--- a/Day_3.ipynb
+++ b/Day_3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d57aabfe-82e4-45d0-807c-a982cc016bde",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "77a1248e-242e-4c9c-b2ff-2f7d7ef7162d",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "983"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,15 +83,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "dc4fb00c-419e-4a7f-9314-1d90bf0baaef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1836"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "def transpose(x, y, z):\n",
+    "    return [\n",
+    "        (x[0], y[0], z[0]),\n",
+    "        (x[1], y[1], z[1]),\n",
+    "        (x[2], y[2], z[2])\n",
+    "    ]\n",
+    "\n",
     "def possible_triangles_generator(inp):\n",
-    "    \n",
-    "    "
+    "    inp = iter(inp)\n",
+    "    while next3 := tuple(islice(inp, 3)):\n",
+    "        for tri in transpose(*next3):\n",
+    "            yield tri\n",
+    "\n",
+    "def part2(inp):\n",
+    "    return len(list(filter(valid_triangle, possible_triangles_generator(inp))))\n",
+    "            \n",
+    "            \n",
+    "test_inp = [\n",
+    "    ('101', '301', '501'),\n",
+    "    ('102', '302', '502'),\n",
+    "    ('103', '303', '503'),\n",
+    "    ('201', '1', '601'),\n",
+    "    ('202', '2', '602'),\n",
+    "    ('203', '3', '603')\n",
+    "]\n",
+    "\n",
+    "assert part2(test_inp) == 5\n",
+    "\n",
+    "part2(triangles)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63dabcc3-8a80-45a2-be09-66e62e9c6ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
