--- a/Day_6.ipynb
+++ b/Day_6.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "f4c123cb-3c88-400d-8eeb-89e853a6530c",
    "metadata": {},
    "outputs": [
@@ -68,14 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('w', 25), ('u', 24), ('r', 24), ('j', 24), ('s', 24), ('c', 24), ('i', 24), ('a', 24), ('k', 24), ('g', 24), ('q', 24), ('t', 24), ('n', 24), ('d', 24), ('h', 24), ('f', 24), ('v', 24), ('o', 24), ('y', 24), ('m', 24), ('x', 24), ('b', 24), ('p', 24), ('l', 24), ('z', 24), ('e', 23)]\n",
-      "[('k', 25), ('f', 24), ('r', 24), ('o', 24), ('s', 24), ('n', 24), ('i', 24), ('l', 24), ('w', 24), ('c', 24), ('x', 24), ('j', 24), ('h', 24), ('a', 24), ('z', 24), ('u', 24), ('p', 24), ('y', 24), ('m', 24), ('g', 24), ('t', 24), ('b', 24), ('q', 24), ('e', 24), ('d', 24), ('v', 23)]\n",
-      "[('b', 25), ('l', 24), ('d', 24), ('w', 24), ('k', 24), ('n', 24), ('t', 24), ('s', 24), ('g', 24), ('u', 24), ('q', 24), ('x', 24), ('j', 24), ('m', 24), ('f', 24), ('y', 24), ('e', 24), ('p', 24), ('o', 24), ('v', 24), ('h', 24), ('c', 24), ('r', 24), ('z', 24), ('i', 24), ('a', 23)]\n",
-      "[('v', 25), ('e', 24), ('d', 24), ('n', 24), ('c', 24), ('g', 24), ('t', 24), ('p', 24), ('q', 24), ('s', 24), ('x', 24), ('i', 24), ('l', 24), ('m', 24), ('r', 24), ('w', 24), ('a', 24), ('h', 24), ('z', 24), ('y', 24), ('o', 24), ('b', 24), ('f', 24), ('u', 24), ('j', 24), ('k', 23)]\n",
-      "[('m', 25), ('v', 24), ('g', 24), ('y', 24), ('o', 24), ('r', 24), ('x', 24), ('b', 24), ('d', 24), ('l', 24), ('u', 24), ('f', 24), ('a', 24), ('z', 24), ('q', 24), ('k', 24), ('p', 24), ('j', 24), ('c', 24), ('h', 24), ('n', 24), ('i', 24), ('s', 24), ('e', 24), ('t', 24), ('w', 23)]\n",
-      "[('i', 25), ('q', 24), ('r', 24), ('e', 24), ('u', 24), ('v', 24), ('b', 24), ('l', 24), ('z', 24), ('t', 24), ('x', 24), ('n', 24), ('g', 24), ('j', 24), ('p', 24), ('c', 24), ('h', 24), ('m', 24), ('o', 24), ('d', 24), ('y', 24), ('f', 24), ('k', 24), ('s', 24), ('w', 24), ('a', 23)]\n",
-      "[('k', 25), ('w', 24), ('l', 24), ('a', 24), ('m', 24), ('j', 24), ('v', 24), ('r', 24), ('x', 24), ('u', 24), ('f', 24), ('o', 24), ('y', 24), ('t', 24), ('z', 24), ('n', 24), ('e', 24), ('b', 24), ('q', 24), ('s', 24), ('p', 24), ('c', 24), ('d', 24), ('h', 24), ('i', 24), ('g', 23)]\n",
-      "[('b', 25), ('k', 24), ('h', 24), ('q', 24), ('t', 24), ('v', 24), ('l', 24), ('y', 24), ('o', 24), ('m', 24), ('d', 24), ('w', 24), ('p', 24), ('x', 24), ('s', 24), ('g', 24), ('j', 24), ('e', 24), ('i', 24), ('r', 24), ('f', 24), ('u', 24), ('n', 24), ('c', 24), ('z', 24), ('a', 23)]\n"
+      "evakwaga"
      ]
     }
    ],
@@ -83,19 +76,18 @@
     "def part2():\n",
     "    counts = get_column_counts(read_input_as_file('day6'))\n",
     "    for count in counts:\n",
-    "        #print(count.most_common()[-2:-1], end='')\n",
-    "        print(count.most_common())\n",
+    "        print(count.most_common()[-1][0], end='')\n",
     "\n",
     "part2()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cba6f670-1296-49da-bfd9-f90882d3aa2f",
+   "cell_type": "markdown",
+   "id": "7638c1ca-0d66-42ab-905e-d611db85d21b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Nice and easy 🙂"
+   ]
   }
  ],
  "metadata": {
