--- a/Day_7.ipynb
+++ b/Day_7.ipynb
@@ -222,7 +222,7 @@
    "id": "2e2b9141-b1ae-4327-99e7-32988143c7be",
    "metadata": {},
    "source": [
-    "That took longer than expected, mostly due to a bug with this line: `bab_l = list(map(bab, aba_l))`. I'd originally left out the list conversion, which gave me "
+    "That took longer than expected, mostly due to a bug with this line: `bab_l = list(map(bab, aba_l))`. I'd originally left out the list conversion, which gave me a lower number of correct IPs. I think this is because without conversion, the generator gets exhausted after the first hypernet sections, meaning it didn't match anything in later sections."
    ]
   }
  ],
